<resources>
    <string name="app_name">TrindadeWare</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="besome_blog_url">http://medium.com/sketchware</string>
    <string name="block_add_list_int_body_1">to</string>
    <string name="block_add_list_int_head">add</string>
    <string name="block_add_list_int_tail" />
    <string name="block_add_list_map_body_1">value</string>
    <string name="block_add_list_map_body_2">to</string>
    <string name="block_add_list_map_head">add key</string>
    <string name="block_add_list_map_tail" />
    <string name="block_add_list_str_body_1">to</string>
    <string name="block_add_list_str_head">add</string>
    <string name="block_add_list_str_tail" />
    <string name="block_add_map_to_list_body_1">to</string>
    <string name="block_add_map_to_list_head">add</string>
    <string name="block_add_map_to_list_tail" />
    <string name="block_add_source_directly_head">add source directly</string>
    <string name="block_add_source_directly_tail" />
    <string name="block_adview_load_ad_head" />
    <string name="block_adview_load_ad_tail">load</string>
    <string name="block_and_body_1">and</string>
    <string name="block_and_head" />
    <string name="block_and_tail" />
    <string name="block_bigger_body_1">></string>
    <string name="block_bigger_head" />
    <string name="block_bigger_tail" />
    <string name="block_bluetoothconnect_activate_bluetooth_head" />
    <string name="block_bluetoothconnect_activate_bluetooth_tail">activate bluetooth</string>
    <string name="block_bluetoothconnect_get_paired_devices_body_1">get paired devices to</string>
    <string name="block_bluetoothconnect_get_paired_devices_head" />
    <string name="block_bluetoothconnect_get_paired_devices_tail" />
    <string name="block_bluetoothconnect_get_random_uuid_head" />
    <string name="block_bluetoothconnect_get_random_uuid_tail">get random uuid</string>
    <string name="block_bluetoothconnect_is_bluetooth_activated_head" />
    <string name="block_bluetoothconnect_is_bluetooth_activated_tail">is bluetooth activated</string>
    <string name="block_bluetoothconnect_is_bluetooth_enabled_head" />
    <string name="block_bluetoothconnect_is_bluetooth_enabled_tail">is bluetooth enabled</string>
    <string name="block_bluetoothconnect_ready_connection_body_1">ready connection with tag</string>
    <string name="block_bluetoothconnect_ready_connection_head" />
    <string name="block_bluetoothconnect_ready_connection_tail" />
    <string name="block_bluetoothconnect_ready_connection_to_uuid_body_1">ready connection to uuid</string>
    <string name="block_bluetoothconnect_ready_connection_to_uuid_body_2">with tag</string>
    <string name="block_bluetoothconnect_ready_connection_to_uuid_head" />
    <string name="block_bluetoothconnect_ready_connection_to_uuid_tail" />
    <string name="block_bluetoothconnect_send_data_body_1">send data</string>
    <string name="block_bluetoothconnect_send_data_body_2">with tag</string>
    <string name="block_bluetoothconnect_send_data_head" />
    <string name="block_bluetoothconnect_send_data_tail" />
    <string name="block_bluetoothconnect_start_connection_body_1">start connection to address</string>
    <string name="block_bluetoothconnect_start_connection_body_2">with tag</string>
    <string name="block_bluetoothconnect_start_connection_head" />
    <string name="block_bluetoothconnect_start_connection_tail" />
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_1">start connection to uuid</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_2">and address</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_3">with tag</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_head" />
    <string name="block_bluetoothconnect_start_connection_to_uuid_tail" />
    <string name="block_bluetoothconnect_stop_connection_body_1">stop connection with tag</string>
    <string name="block_bluetoothconnect_stop_connection_head" />
    <string name="block_bluetoothconnect_stop_connection_tail" />
    <string name="block_break_head">stop</string>
    <string name="block_break_tail" />
    <string name="block_calendar_add_body_1">add</string>
    <string name="block_calendar_add_body_2">value</string>
    <string name="block_calendar_add_head" />
    <string name="block_calendar_add_tail" />
    <string name="block_calendar_diff_body_1">-</string>
    <string name="block_calendar_diff_head">Difference</string>
    <string name="block_calendar_diff_tail" />
    <string name="block_calendar_format_body_1">Format</string>
    <string name="block_calendar_format_head" />
    <string name="block_calendar_format_tail" />
    <string name="block_calendar_get_now_head" />
    <string name="block_calendar_get_now_tail">getNow</string>
    <string name="block_calendar_get_time_head" />
    <string name="block_calendar_get_time_tail">getTime(ms)</string>
    <string name="block_calendar_set_body_1">set</string>
    <string name="block_calendar_set_body_2">value</string>
    <string name="block_calendar_set_head" />
    <string name="block_calendar_set_tail" />
    <string name="block_calendar_set_time_body_1">setTime</string>
    <string name="block_calendar_set_time_head" />
    <string name="block_calendar_set_time_tail">ms</string>
    <string name="block_calendarview_get_date_head" />
    <string name="block_calendarview_get_date_tail">getDate(ms)</string>
    <string name="block_calendarview_set_date_body_1">setDate</string>
    <string name="block_calendarview_set_date_head" />
    <string name="block_calendarview_set_date_tail">ms</string>
    <string name="block_calendarview_set_max_date_body_1">setMaxDate</string>
    <string name="block_calendarview_set_max_date_head" />
    <string name="block_calendarview_set_max_date_tail">ms</string>
    <string name="block_calendarview_set_min_date_body_1">setMinDate</string>
    <string name="block_calendarview_set_min_date_head" />
    <string name="block_calendarview_set_min_date_tail">ms</string>
    <string name="block_camera_start_take_picture_head" />
    <string name="block_camera_start_take_picture_tail">take picture</string>
    <string name="block_category_component_func">Component</string>
    <string name="block_category_control">Control</string>
    <string name="block_category_file">File</string>
    <string name="block_category_list">List</string>
    <string name="block_category_math">Math</string>
    <string name="block_category_moreblock">More Block</string>
    <string name="block_category_operator">Operator</string>
    <string name="block_category_var">Variable</string>
    <string name="block_category_view_func">View</string>
    <string name="block_clear_list_head">clear</string>
    <string name="block_clear_list_tail" />
    <string name="block_close_drawer_head">closeDrawer</string>
    <string name="block_close_drawer_tail" />
    <string name="block_contain_list_int_body_1">contains</string>
    <string name="block_contain_list_int_head" />
    <string name="block_contain_list_int_tail" />
    <string name="block_contain_list_map_body_1">contains at</string>
    <string name="block_contain_list_map_body_2">key</string>
    <string name="block_contain_list_map_head" />
    <string name="block_contain_list_map_tail" />
    <string name="block_contain_list_str_body_1">contains</string>
    <string name="block_contain_list_str_head" />
    <string name="block_contain_list_str_tail" />
    <string name="block_copy_to_clipboard_head">copyToClipboard</string>
    <string name="block_copy_to_clipboard_tail" />
    <string name="block_crop_bitmap_center_body_1">to path</string>
    <string name="block_crop_bitmap_center_body_2">width</string>
    <string name="block_crop_bitmap_center_body_3">height</string>
    <string name="block_crop_bitmap_center_head">crop image center from path</string>
    <string name="block_crop_bitmap_center_tail" />
    <string name="block_decrease_int_head" />
    <string name="block_decrease_int_tail">decrease 1</string>
    <string name="block_delete_list_body_1">of</string>
    <string name="block_delete_list_head">delete at</string>
    <string name="block_delete_list_tail" />
    <string name="block_dialog_cancel_button_body_1">Cancel Button</string>
    <string name="block_dialog_cancel_button_head" />
    <string name="block_dialog_cancel_button_tail">Clicked</string>
    <string name="block_dialog_dismiss_head" />
    <string name="block_dialog_dismiss_tail">dismiss</string>
    <string name="block_dialog_neutral_button_body_1">Neutral Button</string>
    <string name="block_dialog_neutral_button_head" />
    <string name="block_dialog_neutral_button_tail">Clicked</string>
    <string name="block_dialog_ok_button_body_1">OK Button</string>
    <string name="block_dialog_ok_button_head" />
    <string name="block_dialog_ok_button_tail">Clicked</string>
    <string name="block_dialog_set_message_body_1">set message</string>
    <string name="block_dialog_set_message_head" />
    <string name="block_dialog_set_message_tail" />
    <string name="block_dialog_set_title_body_1">set title</string>
    <string name="block_dialog_set_title_head" />
    <string name="block_dialog_set_title_tail" />
    <string name="block_dialog_show_head" />
    <string name="block_dialog_show_tail">show</string>
    <string name="block_divide_body_1">/</string>
    <string name="block_divide_head" />
    <string name="block_divide_tail" />
    <string name="block_do_toast_head">Toast</string>
    <string name="block_do_toast_tail" />
    <string name="block_else_head">else</string>
    <string name="block_else_tail" />
    <string name="block_equal_body_1">=</string>
    <string name="block_equal_head" />
    <string name="block_equal_tail" />
    <string name="block_false_head">false</string>
    <string name="block_false_tail" />
    <string name="block_file_get_data_body_1">getData key</string>
    <string name="block_file_get_data_head" />
    <string name="block_file_get_data_tail" />
    <string name="block_file_picker_start_pick_files_head" />
    <string name="block_file_picker_start_pick_files_tail">pick files</string>
    <string name="common_word_cancel">Cancel</string>
    <string name="myprojects_sign_apk_hint_enter_new_password">Enter new password</string>
    <string name="myprojects_sign_apk_new_certificate_button_create">Create</string>
    <string name="myprojects_sign_apk_new_certificate_hint_certificate_name">Enter certificate name</string>
    <string name="myprojects_sign_apk_new_certificate_hint_city">City or Locality</string>
    <string name="myprojects_sign_apk_new_certificate_hint_confirm_password">Confirm the password</string>
    <string name="myprojects_sign_apk_new_certificate_hint_country_code">Country Code (XX)</string>
    <string name="myprojects_sign_apk_new_certificate_hint_first_and_last_name">First and Last Name</string>
    <string name="myprojects_sign_apk_new_certificate_hint_organization">Organization</string>
    <string name="myprojects_sign_apk_new_certificate_hint_organizational_unit">Organizational Unit</string>
    <string name="myprojects_sign_apk_new_certificate_hint_state">State or Province</string>
    <string name="myprojects_sign_apk_new_certificate_title_certificate">Certificate</string>
    <string name="myprojects_sign_apk_new_certificate_title_certificate_creds">Certificate credentials</string>
    <string name="myprojects_sign_apk_new_certificate_title_validity">Validity(Years)</string>
    <string name="about_team_title">The team</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_majorchanges_title">Major changes</string>
    <string name="about_joindiscord">Join our Discord server</string>
</resources>