<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/abc_ic_ab_back_material"
                app:title="New certificate"
                app:subTitle="export path: trindadeware/keystore/" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_new_cert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="4dp"
                android:text="@string/myprojects_sign_apk_new_certificate_title_certificate_creds"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_keystore_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/myprojects_sign_apk_new_certificate_hint_certificate_name"
                android:importantForAutofill="noExcludeDescendants">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_keystore_alias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_keystore_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/myprojects_sign_apk_hint_enter_new_password"
                android:importantForAutofill="noExcludeDescendants">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_keystore_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_keystore_passwd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/myprojects_sign_apk_new_certificate_hint_confirm_password"
                android:importantForAutofill="noExcludeDescendants">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_keystore_passwd1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_valid_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/myprojects_sign_apk_new_certificate_title_validity"
                android:importantForAutofill="noExcludeDescendants">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_valid_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_cert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:paddingHorizontal="4dp"
                android:text="@string/myprojects_sign_apk_new_certificate_title_certificate"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_dn_cn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/myprojects_sign_apk_new_certificate_hint_first_and_last_name"
                android:importantForAutofill="noExcludeDescendants">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_dn_cn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_dn_ou"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/myprojects_sign_apk_new_certificate_hint_organizational_unit"
                    android:importantForAutofill="noExcludeDescendants">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dn_ou"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_dn_o"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/myprojects_sign_apk_new_certificate_hint_organization"
                    android:importantForAutofill="noExcludeDescendants">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dn_o"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_dn_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/myprojects_sign_apk_new_certificate_hint_city"
                    android:importantForAutofill="noExcludeDescendants">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dn_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_dn_st"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/myprojects_sign_apk_new_certificate_hint_state"
                    android:importantForAutofill="noExcludeDescendants">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dn_st"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_dn_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/myprojects_sign_apk_new_certificate_hint_country_code"
                android:importantForAutofill="noExcludeDescendants">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_dn_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_keystore_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/common_word_cancel"
            android:textSize="@dimen/text_size_button_material"
            app:backgroundTint="?colorAccent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_keystore_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/myprojects_sign_apk_new_certificate_button_create"
            android:textSize="@dimen/text_size_button_material" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
